configure jolc for truffle